Got a toggleable theme on the sites page for blackboard working. Need to solve the flickering issue and make sure the css extends all portions of the webpage.

--- a/themePick/popup/popup.css
+++ b/themePick/popup/popup.css
@@ -2,14 +2,10 @@ html, body {
   font-family: "Open Sans", sans-serif;
   font-size: 14px;
   margin: 0;
-  min-height: 180px;
+  height: auto;
   padding: 0;
   width: 384px;
   background-color: #414040;
-}
-.button {
-  text-align: center;
-  background-color: #FFFFFF;
 }
 
 h1 {
